// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`install should have default options 1`] = `
Object {
  "config": Object {
    "id": null,
    "params": Object {
      "send_page_view": true,
    },
  },
  "enabled": true,
  "globalObjectName": "gtag",
  "pageTrackerEnabled": true,
  "pageTrackerScreenviewEnabled": false,
  "pageTrackerTemplate": null,
}
`;

exports[`install should merge options on install 1`] = `
Object {
  "config": Object {
    "id": 1,
    "params": Object {
      "send_page_view": true,
    },
  },
  "enabled": false,
  "globalObjectName": "gtag",
  "pageTrackerEnabled": true,
  "pageTrackerScreenviewEnabled": false,
  "pageTrackerTemplate": null,
}
`;
